# AofCode_Cpp_Template

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md
.github/: constants.env
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: CMakeLists.txt.in  CMakeLists.txt.test.in  config.hpp.in  day_details.cpp.in  day_details.hpp.in  day_main.cpp.in  day_test.cpp.in  header.html
fuzz_test/: CMakeLists.txt
include/AofCode_Cpp/: aoc_library.hpp  sample_library.hpp
src/: CMakeLists.txt
src/aoc_library/: CMakeLists.txt  aoc_library.cpp
src/campaigns/: CMakeLists.txt
src/campaigns/2021/: CMakeLists.txt
src/campaigns/2021/day01/: 2021_day01.hpp  main.cpp
src/campaigns/2022/: CMakeLists.txt
src/campaigns/2022/day01/: 2022_day01.cpp  2022_day01.hpp  CMakeLists.txt  main.cpp
src/cli_test/: CMakeLists.txt  cli_test.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: .clang-tidy  AoCLib_tests.cpp  CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/campaigns/2022/: CMakeLists.txt
test/campaigns/2022/day01/: CMakeLists.txt  day01_test.cpp
test/tests_2022/: CMakeLists.txt  tests.cpp
